--- a/index.html
+++ b/index.html
@@ -4,24 +4,39 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Abdullah - Full Stack Developer Portfolio. Showcasing modern web development projects and skills." />
-    <meta name="keywords" content="Full Stack Developer, React, Node.js, JavaScript, Web Development, Portfolio" />
+    <meta
+      name="description"
+      content="Abdullah - Full Stack Developer Portfolio. Showcasing modern web development projects and skills."
+    />
+    <meta
+      name="keywords"
+      content="Full Stack Developer, React, Node.js, JavaScript, Web Development, Portfolio"
+    />
     <meta name="author" content="Abdullah" />
-    
+
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://abdullah-portfolio.example.com/" />
     <meta property="og:title" content="Abdullah - Full Stack Developer" />
-    <meta property="og:description" content="Full Stack Developer passionate about creating amazing web experiences" />
+    <meta
+      property="og:description"
+      content="Full Stack Developer passionate about creating amazing web experiences"
+    />
     <meta property="og:image" content="/og-image.jpg" />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://abdullah-portfolio.example.com/" />
+    <meta
+      property="twitter:url"
+      content="https://abdullah-portfolio.example.com/"
+    />
     <meta property="twitter:title" content="Abdullah - Full Stack Developer" />
-    <meta property="twitter:description" content="Full Stack Developer passionate about creating amazing web experiences" />
+    <meta
+      property="twitter:description"
+      content="Full Stack Developer passionate about creating amazing web experiences"
+    />
     <meta property="twitter:image" content="/og-image.jpg" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Abdullah - Full Stack Developer</title>
   </head>
   <body>
